# ckb-standard-udt-contracts

./: .gitignore  AgentDevelopmentGuide.md  Architecture.md  Cargo.toml  Makefile  README.md  TODO.md  agents.md  checksums.txt  rust-toolchain.toml
.sisyphus/: boulder.json
.sisyphus/drafts/: udtx-cli-plan.md
.sisyphus/notepads/udtx-cli/: issues.md  learnings.md
.sisyphus/plans/: udtx-cli.md
contracts/access-list/: Cargo.toml  README.md
contracts/access-list/src/: entry.rs  error.rs  lib.rs  main.rs  meta.rs  mode.rs  run.rs  shards.rs
contracts/access-list/src/meta/: authority.rs  cells.rs  mod.rs  parser.rs
contracts/enhanced-sudt/: Cargo.toml  README.md
contracts/enhanced-sudt-meta/: Cargo.toml  README.md  build.rs
contracts/enhanced-sudt-meta/src/: error.rs  lib.rs  main.rs  meta_cell.rs  update.rs
contracts/enhanced-sudt/src/: error.rs  main.rs  meta.rs
contracts/enhanced-xudt/: Cargo.toml  README.md  build.rs
contracts/enhanced-xudt-meta/: Cargo.toml  README.md  build.rs
contracts/enhanced-xudt-meta/src/: error.rs  main.rs  meta_cell.rs  run.rs  update.rs
contracts/enhanced-xudt/src/: access.rs  error.rs  extensions.rs  meta.rs  run.rs
contracts/sudt/: Cargo.toml
contracts/sudt-meta/: Cargo.toml  README.md  build.rs
contracts/sudt-meta/src/: entry.rs  error.rs  lib.rs  main.rs  meta_cell.rs  run.rs  state.rs  update.rs
contracts/sudt/src/: entry.rs  error.rs  lib.rs  main.rs  run.rs
contracts/sudt/src/meta/: authority.rs  cells.rs  mod.rs  parser.rs  supply.rs
contracts/xudt/: Cargo.toml  README.md  build.rs
contracts/xudt-meta/: Cargo.toml  README.md  build.rs
contracts/xudt-meta/src/: constants.rs  entry.rs  error.rs  lib.rs  main.rs  meta_cell.rs  update.rs
contracts/xudt-meta/src/meta_cell/: access_list.rs  cells.rs  config.rs  mod.rs  parser.rs  token.rs
contracts/xudt-meta/src/state/: access_list.rs  cells.rs  mod.rs  parser.rs  token.rs
contracts/xudt/src/: access.rs  entry.rs  error.rs  extensions.rs  lib.rs  main.rs  meta.rs  run.rs  validation.rs
docs/superpowers/plans/: 2026-05-05-enhanced-udt-reimplementation.md  2026-05-06-access-list-state-machine.md  2026-05-06-authority-type-schema-runtime.md  2026-05-06-cell-model-invariants.md  2026-05-06-contract-structure-refactor.md  2026-05-06-meta-supply-delta-coordination.md  2026-05-16-single-script-authority-dedup.md  2026-05-16-zero-supply-meta-destroy.md  2026-05-17-cycle-optimizations.md  2026-05-17-xudt-holder-access-proof.md
docs/superpowers/specs/: 2026-05-05-enhanced-udt-supply-mode-design.md  2026-05-06-access-list-state-machine-design.md  2026-05-06-authority-type-schema-runtime-design.md  2026-05-06-cell-model-invariants-design.md  2026-05-06-contract-structure-refactor-design.md  2026-05-06-meta-supply-delta-coordination-design.md  2026-05-16-single-script-authority-dedup-design.md  2026-05-16-zero-supply-meta-destroy-design.md  2026-05-17-xudt-holder-access-proof-design.md  2026-05-21-devnet-practice-summary-for-forum.md  2026-05-21-udtx-cli-orchestration-design.md
lib/script-utils/: Cargo.toml
lib/script-utils/src/: amount.rs  authority.rs  cells.rs  error.rs  lib.rs  meta.rs  supply.rs  token.rs
lib/types/: Cargo.toml
lib/types/src/: error.rs  lib.rs  metadata.rs
lib/types/src/metadata/: access_list.rs  authority.rs  codec.rs  config.rs  extension.rs  mod.rs  script_attr.rs  tests.rs  token.rs
lib/types/src/schemas/: blockchain.mol  metadata.mol
scripts/: ckb-data-hash
tests/: Cargo.toml
tests/plugins/authority-dl-allow/: .gitignore  Makefile
tests/plugins/authority-dl-allow/src/: eudt_authorize.c  udt_authorize.c
tests/plugins/authority-dl-deny/: .gitignore  Makefile
tests/plugins/authority-dl-deny/src/: eudt_authorize.c  udt_authorize.c
tests/plugins/authority-spawn-allow/: Cargo.toml
tests/plugins/authority-spawn-allow/src/: main.rs
tests/plugins/authority-spawn-deny/: Cargo.toml
tests/plugins/authority-spawn-deny/src/: main.rs
tests/plugins/dl-allow/: Cargo.toml  Makefile  README.md
tests/plugins/dl-allow/src/: main.rs
tests/plugins/dl-deny/: Cargo.toml  README.md
tests/plugins/dl-deny/src/: main.rs
tests/plugins/dl-shared-allow/: .gitignore  Makefile
tests/plugins/dl-shared-deny/: .gitignore  Makefile
tests/plugins/spawn-allow/: Cargo.toml  README.md
tests/plugins/spawn-deny/: Cargo.toml  README.md
tests/src/: fixtures.rs  helpers.rs  lib.rs  metadata_builders.rs  test_helpers.rs  tests.rs
tests/src/test_helpers/: access_list.rs  metadata.rs  mod.rs  scripts.rs
tests/src/tests/: access_list.rs  common.rs  plugin_runtime.rs  sudt.rs  sudt_meta.rs  xudt.rs  xudt_meta.rs
udtx/: Cargo.toml
udtx/src/: config.rs  error.rs  keys.rs  lib.rs  logger.rs  main.rs  rpc.rs
udtx/src/commands/: access.rs  apply.rs  authority.rs  chain.rs  doctor.rs  env.rs  mod.rs  plan.rs  report.rs  verify.rs
udtx/src/commands/token/: burn.rs  create.rs  info.rs  mint.rs  mod.rs  transfer.rs
(+35 files in other folders)
