[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "lib/types",
  "lib/script-utils",
  "tests/plugins/spawn-deny",
  "tests/plugins/spawn-allow",
  "tests/plugins/dl-deny",
  "tests/plugins/dl-allow",
  "contracts/access-list",
  "contracts/enhanced-xudt",
  "contracts/enhanced-xudt-meta",
  "contracts/enhanced-sudt",
  "contracts/enhanced-sudt-meta",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
