[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "lib/types",
  "lib/script-utils",
  "tests/plugins/authority-spawn-deny",
  "tests/plugins/authority-spawn-allow",
  "tests/plugins/spawn-deny",
  "tests/plugins/spawn-allow",
  "tests/plugins/dl-allow",
  "contracts/access-list",
  "contracts/xudt",
  "contracts/xudt-meta",
  "contracts/sudt",
  "contracts/sudt-meta",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
