[package]
name = "xudt"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = { version = "1.1", features = ["dlopen-c"] }
standard-udt-types = { path = "../../lib/types", default-features = false, features = ["no-std"] }
standard-udt-script-utils = { path = "../../lib/script-utils", default-features = false }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
