[package]
name = "standard-udt-script-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "1.1", features = ["dlopen-c"] }
standard-udt-types = { path = "../types", default-features = false, features = ["no-std"] }

[features]
default = []
native-simulator = ["ckb-std/native-simulator", "standard-udt-types/native-simulator"]
