[package]
name = "standard-udt-types"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16.3", optional = true }
ckb-types = { version = "0.120.0", optional = true }
molecule = { version = "0.8.0", default-features = false }
cfg-if = "1.0.0"

[features]
default = ["std"]
std = ["dep:ckb-types"]
no-std = ["dep:ckb-std"]
native-simulator = ["ckb-std/native-simulator"]
